--- a/output/authors.html
+++ b/output/authors.html
@@ -22,14 +22,25 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.Simplex.min.css" type="text/css"/>
+        <link rel="stylesheet" href="/theme/css/bootstrap.Lumen.min.css" type="text/css"/>
     <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/colorful.css" rel="stylesheet">
+    <link href="/theme/css/pygments/default.css" rel="stylesheet">
     <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
         <link href="/static/custom.css" rel="stylesheet">
 
 
+            <script>
+                    function copyFunction() {
+                      const copyText = document.getElementById("myInput").textContent;
+                      const textArea = document.createElement('textarea');
+                      textArea.textContent = copyText;
+                      textArea.select();
+                      document.execCommand("copy");
+                    }
+
+                    document.getElementById('button').addEventListener('click', copyFunction);
+            </script>
 
 </head>
 <body>
@@ -37,23 +48,11 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
             <a href="/" class="navbar-brand">
 stack            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                        <li >
-                            <a href="/category/pyhton.html">Pyhton</a>
-                        </li>
-                        <li >
-                            <a href="/category/review.html">Review</a>
-                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -68,48 +67,41 @@ stack            </a>
 <!-- Content Container -->
 <div class="container">
     <div class="row">
-        <div class="col-sm-9">
+        <div class="col-sm-2"id="sidebar_left">
+        </div>
+        
+        <div class="col-sm-8">
   <h1>Authors on stack</h1>
-        <li><a href="/author/bob-minnich.html">Bob Minnich</a> (1)</li>
-        <li><a href="/author/john-doe.html">John Doe</a> (1)</li>
+        <li><a href="/author/bob-minnich.html">Bob Minnich</a> (6)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
-<!-- Sidebar -->
-<section class="well well-sm">
-  <ul class="list-group list-group-flush">
+<!--Article References for Stack-->
+<!--Article References for Python-->
 
-<!-- Sidebar/Social -->
-<li class="list-group-item">
-  <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
-  <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="#"><i class="fa fa-you-can-add-links-in-your-config-file-square fa-lg"></i> You can add links in your config file</a></li>
-    <li class="list-group-item"><a href="#"><i class="fa fa-another-social-link-square fa-lg"></i> Another social link</a></li>
-  </ul>
-</li>
-<!-- End Sidebar/Social -->
+<!--Related Questions-->
+	
 
-<!-- Sidebar/Links -->
-<li class="list-group-item">
-  <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
-  <ul class="list-group" id="links">
-    <li class="list-group-item">
-      <a href="http://getpelican.com/" target="_blank">Pelican</a>
-    </li>
-    <li class="list-group-item">
-      <a href="http://python.org/" target="_blank">Python.org</a>
-    </li>
-    <li class="list-group-item">
-      <a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a>
-    </li>
-    <li class="list-group-item">
-      <a href="#" target="_blank">You can modify those links in your config file</a>
-    </li>
-  </ul>
-</li>
-<!-- End Sidebar/Links -->
-  </ul>
-</section>
+<!--<section class="well well-sm">-->
+  <!--<ul class="list-group list-group-flush">-->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+
+
+  <!--</ul>-->
+<!--</section>-->
 <!-- End Sidebar -->            </aside>
         </div>
     </div>
@@ -120,7 +112,7 @@ stack            </a>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2018 Bob Minnich
+         <div class="col-xs-10">&copy; 2019 Bob Minnich
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -139,5 +131,6 @@ stack            </a>
 
 
 
+    
 </body>
 </html>
