--- a/output/categories.html
+++ b/output/categories.html
@@ -32,13 +32,19 @@
 
             <script>
                     function copyFunction() {
-                      const copyText = document.getElementById("myInput").textContent;
-                      const textArea = document.createElement('textarea');
-                      textArea.textContent = copyText;
-                      textArea.select();
-                      document.execCommand("copy");
+                      var copyText = document.getElementById("myInput").textContent;
+                        
+                        var dummy = document.createElement("textarea");
+                        // to avoid breaking orgain page when copying more words
+                        // cant copy when adding below this code
+                        // dummy.style.display = 'none'
+                        document.body.appendChild(dummy);
+                        //Be careful if you use texarea. setAttribute('value', value), which works with "input" does not work with "textarea". – Eduard
+                        dummy.value = copyText;
+                        dummy.select();
+                        document.execCommand("copy");
+                        document.body.removeChild(dummy);
                     }
-
                     document.getElementById('button').addEventListener('click', copyFunction);
             </script>
 
@@ -46,7 +52,7 @@
 <body>
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <a href="/" class="navbar-brand">
 stack            </a>
@@ -65,12 +71,14 @@ stack            </a>
 <!-- End Banner -->
 
 <!-- Content Container -->
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-sm-2"id="sidebar_left">
+        <div class="col-md-2"id="sidebar_left">
+            <aside>
+            </aside>
         </div>
         
-        <div class="col-sm-8">
+        <div class="col-md-7">
     <section id="categories">
       <h1>All Categories for stack</h1>
         <div class="panel-group" id="accordion">
@@ -117,7 +125,7 @@ stack            </a>
 
     </section>
         </div>
-        <div class="col-sm-3" id="sidebar">
+        <div class="col-md-3" id="sidebar">
             <aside>
 <!--Article References for Stack-->
 <!--Article References for Python-->
@@ -152,7 +160,7 @@ stack            </a>
 <!-- End Content Container -->
 
 <footer>
-   <div class="container">
+   <div class="container-fluid">
       <hr>
       <div class="row">
          <div class="col-xs-10">&copy; 2019 Bob Minnich
